--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@daily-co/daily-js": "^0.79.0",
     "@tanstack/react-query": "^5.17.0",
+    "framer-motion": "^12.19.2",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
