--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "vite-react-typescript-starter",
+  "name": "talkshop-ai-video-shopping",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -13,6 +13,7 @@
   "dependencies": {
     "@daily-co/daily-js": "^0.79.0",
     "@tanstack/react-query": "^5.17.0",
+    "@supabase/supabase-js": "^2.39.0",
     "framer-motion": "^12.19.2",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
