--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,18 @@
-# Tavus API Configuration
+# Supabase Configuration (Required)
+VITE_SUPABASE_URL=your_supabase_project_url
+VITE_SUPABASE_ANON_KEY=your_supabase_anon_key
+
+# Tavus API Configuration (Required for AI video hosts)
 VITE_TAVUS_API_KEY=your_tavus_api_key_here
+
+# ElevenLabs API Configuration (Optional - for voice features)
+VITE_ELEVENLABS_API_KEY=your_elevenlabs_api_key
+
+# RevenueCat Configuration (Optional - for monetization)
+VITE_REVENUECAT_API_KEY=your_revenuecat_api_key
 
 # Optional: Custom webhook URL (defaults to built-in webhook)
 VITE_WEBHOOK_URL=
+
+# Google OAuth Configuration (Handled by Supabase)
+# Configure in Supabase Dashboard > Authentication > Providers > Google
