Update OAuth Configuration for Custom Domain

--- a/.env.example
+++ b/.env.example
@@ -16,3 +16,6 @@ VITE_WEBHOOK_URL=
 
 # Google OAuth Configuration (Handled by Supabase)
 # Configure in Supabase Dashboard > Authentication > Providers > Google
+# Use these URLs for your OAuth client:
+# Authorized JavaScript origins: https://shop.tilpas.studio
+# Authorized redirect URIs: https://shop.tilpas.studio?auth=callback
