Secure Netlify configuration without exposed secrets

--- a/.env.example
+++ b/.env.example
@@ -17,5 +17,12 @@ VITE_WEBHOOK_URL=
 # Google OAuth Configuration (Handled by Supabase)
 # Configure in Supabase Dashboard > Authentication > Providers > Google
 # Use these URLs for your OAuth client:
-# Authorized JavaScript origins: https://shop.tilpas.studio
-# Authorized redirect URIs: https://shop.tilpas.studio?auth=callback
+# Authorized JavaScript origins: https://timely-piroshki-b9d6cc.netlify.app
+# Authorized redirect URIs: https://timely-piroshki-b9d6cc.netlify.app?auth=callback
+
+# SECURITY NOTE:
+# Never commit actual API keys to your repository!
+# Set these as environment variables in your deployment platform:
+# - Netlify: Site settings > Environment variables
+# - Vercel: Project settings > Environment Variables
+# - Railway: Variables tab
