--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,7 +1,7 @@
 {
-  "name": "TalkShop - AI Video Shopping",
+  "name": "TalkShop - AI Fashion Styling",
   "short_name": "TalkShop",
-  "description": "Revolutionary AI-powered video shopping experience with virtual hosts",
+  "description": "Revolutionary AI-powered fashion styling experience with virtual stylists",
   "theme_color": "#8b5cf6",
   "background_color": "#1a0033",
   "display": "standalone",
@@ -10,19 +10,19 @@
   "orientation": "portrait-primary",
   "icons": [
     {
-      "src": "/icon-192.png",
+      "src": "/android-chrome-192x192.png",
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "any maskable"
     },
     {
-      "src": "/icon-512.png", 
+      "src": "/android-chrome-512x512.png", 
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "any maskable"
     }
   ],
-  "categories": ["shopping", "lifestyle", "entertainment"],
+  "categories": ["fashion", "lifestyle", "shopping"],
   "screenshots": [
     {
       "src": "/screenshot-wide.png",
@@ -39,13 +39,13 @@
   ],
   "shortcuts": [
     {
-      "name": "Start Shopping",
-      "short_name": "Shop",
-      "description": "Start a new AI shopping session",
-      "url": "/?action=shop",
+      "name": "Start Styling",
+      "short_name": "Style",
+      "description": "Start a new AI styling session",
+      "url": "/?action=style",
       "icons": [
         {
-          "src": "/icon-192.png",
+          "src": "/android-chrome-192x192.png",
           "sizes": "192x192"
         }
       ]
